--- a/index.html
+++ b/index.html
@@ -1,106 +1,319 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!DOCTYPE html><html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Garena Donat - WoopPay orqali</title>
+  <title>Donat Free Fire</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f4f8;
+      background: #f9fafb;
       padding: 20px;
-      text-align: center;
+      color: #222;
     }
-    h1 {
-      color: #1a73e8;
-    }
-    form {
-      background: white;
-      max-width: 400px;
-      margin: 30px auto;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: left;
+    h1, h2 {
+      margin-bottom: 10px;
     }
     label {
+      margin-top: 15px;
       font-weight: bold;
       display: block;
-      margin-top: 15px;
     }
-    input, select {
+    select, input[type=text], input[type=tel], button {
       width: 100%;
       padding: 10px;
-      margin-top: 8px;
+      margin-top: 5px;
+      font-size: 16px;
+      border-radius: 5px;
       border: 1px solid #ccc;
-      border-radius: 8px;
       box-sizing: border-box;
     }
     button {
-      margin-top: 20px;
-      width: 100%;
-      padding: 12px;
-      background-color: #1a73e8;
+      background-color: #2563eb;
       color: white;
-      font-weight: bold;
       border: none;
-      border-radius: 10px;
       cursor: pointer;
-      font-size: 16px;
+      font-weight: bold;
+      margin-top: 20px;
     }
     button:hover {
-      background-color: #155ab6;
+      background-color: #1e4ec8;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 12px;
+      text-align: center;
+    }
+    .currency-selector {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .currency-selector label {
+      margin-top: 0;
+    }
+    .social {
+      margin-top: 25px;
+      display: flex;
+      gap: 10px;
+    }
+    .social a {
+      flex: 1;
+      text-decoration: none;
+      color: white;
+      padding: 12px 0;
+      font-weight: bold;
+      border-radius: 5px;
+      text-align: center;
+    }
+    .tiktok {
+      background: #000;
+    }
+    .instagram {
+      background: #E1306C;
+    }
+    .telegram {
+      background: #0088cc;
+    }
+    #orderModal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0,0,0,0.5);
+    }
+    #orderModalContent {
+      background: white;
+      max-width: 400px;
+      margin: 100px auto;
+      padding: 25px;
+      border-radius: 10px;
+      position: relative;
+    }
+    #orderModalContent span.closeBtn {
+      position: absolute;
+      right: 15px;
+      top: 10px;
+      cursor: pointer;
+      font-size: 25px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
+  <h1>РАХИМОВ ЧАБОР ✅</h1>
+  <label id="labelLang">Выберите язык:</label>
+  <select id="language" onchange="updateLanguage()">
+    <option value="RU">Русский</option>
+    <option value="EN">English</option>
+    <option value="TJ">Тоҷикӣ</option>
+  </select><label id="labelCurrency" style="margin-top:20px">Выберите валюту:</label>
 
-<h1>💎 Garena Donat - WoopPay orqali</h1>
+  <div class="currency-selector">
+    <label><input type="radio" name="currency" value="TJS" checked onchange="updatePrices()"> TJS</label>
+    <label><input type="radio" name="currency" value="USD" onchange="updatePrices()"> USD</label>
+    <label><input type="radio" name="currency" value="RUB" onchange="updatePrices()"> RUB</label>
+  </div>  <p id="topPromo"></p>
+  <h2 id="titleCheap"></h2>
+  <table id="diamondTable">
+    <thead>
+      <tr><th id="thDiamonds"></th><th id="thPrice"></th><th id="thBuy"></th></tr>
+    </thead>
+    <tbody>
+      <tr data-price="10"><td>100 + 5 🎁</td><td class="price"></td><td><button></button></td></tr>
+      <tr data-price="30"><td>310 + 16 🎁</td><td class="price"></td><td><button></button></td></tr>
+      <tr data-price="50"><td>520 + 26 🎁</td><td class="price"></td><td><button></button></td></tr>
+      <tr data-price="95"><td>1060 + 52 🎁</td><td class="price"></td><td><button></button></td></tr>
+      <tr data-price="200"><td>2180 + 218 🎁</td><td class="price"></td><td><button></button></td></tr>
+      <tr data-price="500"><td>5600 + 560 🎁</td><td class="price"></td><td><button></button></td></tr>
+    </tbody>
+  </table>
+  <!-- Vaucherlar bo‘limi --><h2 id="titleVoucher"></h2>
+<table id="voucherTable">
+  <thead>
+    <tr><th id="thVoucherType"></th><th id="thPriceVoucher"></th><th id="thVoucherBuy"></th></tr>
+  </thead>
+  <tbody>
+    <tr data-price="9"><td>Lite (90 алмаз)</td><td class="price"></td><td><button></button></td></tr>
+    <tr data-price="18"><td>Ҳафтаина (450 алмаз)</td><td class="price"></td><td><button></button></td></tr>
+    <tr data-price="100"><td>Моҳона (2600 алмаз)</td><td class="price"></td><td><button></button></td></tr>
+  </tbody>
+</table><!-- EVO Access bo‘limi --><h2 id="titleEvo"></h2>
+<table id="evoTable">
+  <thead>
+    <tr><th id="thEvoService"></th><th id="thEvoPrice"></th><th id="thEvoBuy"></th></tr>
+  </thead>
+  <tbody>
+    <tr data-price="9"><td id="evo3d">EVO ACCESS – 3 рӯз (MP40-G18)</td><td class="price"></td><td><button></button></td></tr>
+    <tr data-price="13"><td id="evo7d">EVO ACCESS – 7 рӯз (MP40-G18)</td><td class="price"></td><td><button></button></td></tr>
+    <tr data-price="34"><td id="evo30d">EVO ACCESS – 30 рӯз (MP40-G18)</td><td class="price"></td><td><button></button></td></tr>
+  </tbody>
+</table><!-- Tarmoqlar --><p id="subscribeText"></p>
+<div class="social">
+  <a href="https://tiktok.com/@begaliev_ramazon" target="_blank" class="tiktok">TikTok</a>
+  <a href="https://instagram.com/jabka.75k" target="_blank" class="instagram">Instagram</a>
+  <a href="https://t.me/@Jabor999" target="_blank" class="telegram">Telegram</a>
+</div><!-- Buyurtma Modal oynasi --><div id="orderModal">
+  <div id="orderModalContent">
+    <span class="closeBtn" onclick="closeOrderModal()">×</span>
+    <h2 id="orderTitle"></h2>
+    <label id="labelPlayerId" for="playerId"></label>
+    <input type="text" id="playerId" placeholder="ID" />
+    <label id="labelPlayerPhone" for="playerPhone"></label>
+    <input type="tel" id="playerPhone" placeholder="+992 123 456 789" />
+    <label for="contactMethod" id="labelContact"></label>
+    <select id="contactMethod">
+      <option value="WhatsApp">WhatsApp</option>
+      <option value="Telegram">Telegram</option>
+    </select>
+    <button onclick="sendOrder()">📨 <span id="btnSend"></span></button>
+  </div>
+</div>
+  <!-- Davomi: JavaScript funksiyalari, tarjimalar, to'liq matnli ishlov --><script>
+  const rates = {
+    TJS: 1,
+    USD: 10 / 1.10,
+    RUB: 0.10
+  };
 
-<form id="donatForm">
-  <label for="garenaId">Garena ID yoki foydalanuvchi raqami</label>
-  <input type="text" id="garenaId" name="garenaId" placeholder="Masalan: 123456789" required />
+  let currentLang = "RU";
+  let currentOrderText = "";
+  let currentOrderPrice = 0;
 
-  <label for="amount">Donat miqdorini tanlang</label>
-  <select id="amount" name="amount" required>
-    <option value="">-- Tanlang --</option>
-    <option value="1">100 almaz - 1 USD</option>
-    <option value="3">310 almaz - 3 USD</option>
-    <option value="5">520 almaz - 5 USD</option>
-    <option value="10">1060 almaz - 10 USD</option>
-  </select>
+  const translations = {
+    RU: {
+      topPromo: "🎉 Закажи <strong>1000+ алмазов</strong> и получи <strong>50 в подарок!</strong>",
+      labelLang: "Выберите язык:",
+      labelCurrency: "Выберите валюту:",
+      titleCheap: "🎮 GARENA FREE FIRE – Дешёвый донат 🔥",
+      titleVoucher: "💳 Донат через ваучеры",
+      titleEvo: "🔥 EVO ACCESS",
+      subscribeText: "Подпишись на соцсети и получи <strong>5 алмазов</strong>!",
+      thDiamonds: "Алмазы", thPrice: "Цена", thBuy: "Купить",
+      thVoucherType: "Ваучер", thPriceVoucher: "Цена", thVoucherBuy: "Купить",
+      thEvoService: "Услуга", thEvoPrice: "Цена", thEvoBuy: "Купить",
+      labelPlayerId: "ID игрока:", labelPlayerPhone: "Номер телефона:",
+      labelContact: "Куда отправить:", btnSend: "Отправить",
+      orderTitle: "Заказ алмазов", alertFill: "Пожалуйста, заполните все поля!"
+    },
+    EN: {
+      topPromo: "🎉 Order <strong>1000+ diamonds</strong> and get <strong>50 free!</strong>",
+      labelLang: "Select Language:", labelCurrency: "Select Currency:",
+      titleCheap: "🎮 GARENA FREE FIRE – Cheap Donat 🔥",
+      titleVoucher: "💳 Donat by vouchers", titleEvo: "🔥 EVO ACCESS",
+      subscribeText: "Subscribe and get <strong>5 diamonds</strong>!",
+      thDiamonds: "Diamonds", thPrice: "Price", thBuy: "Buy",
+      thVoucherType: "Voucher", thPriceVoucher: "Price", thVoucherBuy: "Buy",
+      thEvoService: "Service", thEvoPrice: "Price", thEvoBuy: "Buy",
+      labelPlayerId: "Player ID:", labelPlayerPhone: "Phone Number:",
+      labelContact: "Send to:", btnSend: "Send",
+      orderTitle: "Diamond Order", alertFill: "Please fill all fields!"
+    },
+    TJ: {
+      topPromo: "🎉 1000+ алмос фармоиш диҳед ва <strong>50</strong> тӯҳфа гиред!",
+      labelLang: "Забонро интихоб кунед:", labelCurrency: "Асъорро интихоб кунед:",
+      titleCheap: "🎮 GARENA FREE FIRE – Донати арзон 🔥",
+      titleVoucher: "💳 Донат тавассути ваучерҳо", titleEvo: "🔥 EVO ACCESS",
+      subscribeText: "Ба саҳифаҳои мо обуна шавед ва <strong>5 алмос</strong> гиред!",
+      thDiamonds: "Алмосҳо", thPrice: "Нарх", thBuy: "Харидан",
+      thVoucherType: "Ваучер", thPriceVoucher: "Нарх", thVoucherBuy: "Харидан",
+      thEvoService: "Хизмат", thEvoPrice: "Нарх", thEvoBuy: "Харидан",
+      labelPlayerId: "ID бозингар:", labelPlayerPhone: "Рақами телефон:",
+      labelContact: "Ба куҷо фиристода шавад:", btnSend: "Фиристодан",
+      orderTitle: "Фармоиши алмос", alertFill: "Лутфан ҳамаи майдонҳоро пур кунед!"
+    }
+  };
 
-  <button type="submit">To‘lovga o‘tish</button>
-</form>
-<script>
-  document.getElementById('donatForm').addEventListener('submit', function(event) {
-    event.preventDefault();
+  function updateLanguage() {
+    const t = translations[currentLang = document.getElementById("language").value];
+    document.getElementById("topPromo").innerHTML = t.topPromo;
+    document.getElementById("labelLang").textContent = t.labelLang;
+    document.getElementById("labelCurrency").textContent = t.labelCurrency;
+    document.getElementById("titleCheap").textContent = t.titleCheap;
+    document.getElementById("titleVoucher").textContent = t.titleVoucher;
+    document.getElementById("titleEvo").textContent = t.titleEvo;
+    document.getElementById("subscribeText").innerHTML = t.subscribeText;
+    document.getElementById("thDiamonds").textContent = t.thDiamonds;
+    document.getElementById("thPrice").textContent = t.thPrice;
+    document.getElementById("thBuy").textContent = t.thBuy;
+    document.getElementById("thVoucherType").textContent = t.thVoucherType;
+    document.getElementById("thPriceVoucher").textContent = t.thPriceVoucher;
+    document.getElementById("thVoucherBuy").textContent = t.thVoucherBuy;
+    document.getElementById("thEvoService").textContent = t.thEvoService;
+    document.getElementById("thEvoPrice").textContent = t.thEvoPrice;
+    document.getElementById("thEvoBuy").textContent = t.thEvoBuy;
+    document.getElementById("labelPlayerId").textContent = t.labelPlayerId;
+    document.getElementById("labelPlayerPhone").textContent = t.labelPlayerPhone;
+    document.getElementById("labelContact").textContent = t.labelContact;
+    document.getElementById("btnSend").textContent = t.btnSend;
+    updatePrices();
+  }
 
-    const garenaId = document.getElementById('garenaId').value.trim();
-    const amount = document.getElementById('amount').value;
+  function getSelectedCurrency() {
+    return document.querySelector("input[name='currency']:checked").value;
+  }
 
-    if (!garenaId) {
-      alert('Iltimos, Garena ID ni kiriting!');
+  function getConvertedPrice(tjsPrice) {
+    const currency = getSelectedCurrency();
+    const rate = rates[currency];
+    if (currency === "USD") return (tjsPrice / rate).toFixed(2) + " $";
+    if (currency === "RUB") return Math.round(tjsPrice / rate) + " ₽";
+    return tjsPrice.toFixed(2) + " TJS";
+  }
+
+  function updatePrices() {
+    document.querySelectorAll("table tbody tr").forEach(row => {
+      const tjsPrice = parseFloat(row.getAttribute("data-price"));
+      row.querySelector(".price").textContent = getConvertedPrice(tjsPrice);
+      const btn = row.querySelector("button");
+      btn.textContent = translations[currentLang].thBuy;
+      btn.onclick = () => openOrderModal(row.cells[0].textContent, getConvertedPrice(tjsPrice));
+    });
+  }
+
+  function openOrderModal(itemName, itemPrice) {
+    currentOrderText = itemName;
+    currentOrderPrice = itemPrice;
+    document.getElementById("orderTitle").textContent =
+      translations[currentLang].orderTitle + ": " + itemName + " — " + itemPrice;
+    document.getElementById("playerId").value = "";
+    document.getElementById("playerPhone").value = "";
+    document.getElementById("contactMethod").value = "telegram";
+    document.getElementById("orderModal").style.display = "block";
+  }
+
+  function closeOrderModal() {
+    document.getElementById("orderModal").style.display = "none";
+  }
+
+  function sendOrder() {
+    const playerId = document.getElementById("playerId").value.trim();
+    const playerPhone = document.getElementById("playerPhone").value.trim();
+    const contactMethod = document.getElementById("contactMethod").value;
+    if (!playerId || !playerPhone) {
+      alert(translations[currentLang].alertFill);
       return;
     }
-    if (!amount) {
-      alert('Iltimos, donat miqdorini tanlang!');
-      return;
-    }
 
-    // WoopPay telefon raqami (to‘lov qabul qiluvchi)
-    const woopayNumber = '992031831212'; // Siz bergan raqam
+    const message = encodeURIComponent(
+      `🧾 ЗАКАЗ:\n📦 ${currentOrderText} — ${currentOrderPrice}\n🎮 ID: ${playerId}\n📞 Телефон: ${playerPhone}`
+    );
 
-    // To‘lov tavsifi
-    const description = encodeURIComponent(`Garena ID: ${garenaId}, Donat: ${amount} USD`);
+    const contactUrl =
+      contactMethod === "whatsapp"
+        ? `https://wa.me/992931554461?text=${message}`
+        : `https://t.me/@Jabor999?text=${message}`;
 
-    // WoopPay to‘lov URL (misol uchun) - asl WoopPay API dokumentatsiyasiga qarab o‘zgartiring
-    const payUrl = `https://woopay.tj/pay?phone=${woopayNumber}&amount=${amount}&desc=${description}`;
+    window.open(contactUrl, "_blank");
+    closeOrderModal();
+  }
 
-    // Foydalanuvchini to‘lov sahifasiga yo‘naltirish
-    window.location.href = payUrl;
-  });
+  updateLanguage();
 </script>
-
-</body>
-</html>
